@@ -92,7 +92,7 @@ class ConnectionTest < Test::Unit::TestCase
   
   def test_get_collection_empty
     people = @conn.get("/people_empty_elements.xml")
-    assert_equal people, nil
+    assert_nil people
   end
 
   def test_post
